--- a/Day - 3 Task/index.html
+++ b/Day - 3 Task/index.html
@@ -7,6 +7,6 @@
 </head>
 <h1> Day-3 Task</h1>
 <body>
-    <script src="/FSD-WD-58-TM/Day - 3 Task/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
