--- a/Day - 7 Task/index.html
+++ b/Day - 7 Task/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 </head>
 <body>
-    <script src="./index.js"></script>
+    <script src="/Activities/Day - 7 Task/index.js"></script>
 </body>
 </html>
