--- a/Day - 20 Task/index.html
+++ b/Day - 20 Task/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Data Display</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>API Data Display</h1>
-        <div class="row">
-            <div class="col-md-4">
-                <h2>NASA Image of the Day</h2>
-                <div id="nasaImage"></div>
-            </div>
-            <div class="col-md-4">
-                <h2>Current Weather</h2>
-                <div id="weather"></div>
-            </div>
-            <div class="col-md-4">
-                <h2>Random Dog Image</h2>
-                <div id="dogImage"></div>
-            </div>
-        </div>
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Promise Task</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
+  <body>
+
+    <div class="container my-5">
+      <h1 class="text-center bg-info text-white py-3">
+        Promise Task (API Data Fetch)
+      </h1>
+      <div class="col">
+        <div class="col-md-4">
+          <h2>Cat Fact</h2>
+          <button class="btn btn-primary" onclick="fetchCatFact()">
+            Get Cat Fact
+          </button>
+          <p id="catFact" class="mt-3"></p>
+          <hr />
+        </div>
+
+        <div class="col-md-4">
+          <h2>Dog Image</h2>
+          <button class="btn btn-danger" onclick="fetchDogImage()">
+            Get Dog Image
+          </button>
+          <div class="image-container">
+            <img id="dogImage" alt="Dog Image" />
+          </div>
+          <hr />
+        </div>
+
+        <div class="col-md-4">
+          <h2>Joke</h2>
+          <button class="btn btn-success" onclick="fetchJoke()">
+            Get Joke
+          </button>
+          <p id="joke" class="mt-3"></p>
+          <hr />
+        </div>
+        
+      </div>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
